; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwmon/extr_sht15.c_sht15_send_status.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwmon/extr_sht15.c_sht15_send_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sht15_data = type { i32, i32 }

@SHT15_WRITE_STATUS = common dso_local global i32 0, align 4
@SHT15_TSU = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sht15_data*, i32)* @sht15_send_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sht15_send_status(%struct.sht15_data* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sht15_data*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.sht15_data* %0, %struct.sht15_data** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.sht15_data*, %struct.sht15_data** %4, align 8
  %8 = load i32, i32* @SHT15_WRITE_STATUS, align 4
  %9 = call i32 @sht15_send_cmd(%struct.sht15_data* %7, i32 %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = load i32, i32* %6, align 4
  store i32 %13, i32* %3, align 4
  br label %39

14:                                               ; preds = %2
  %15 = load %struct.sht15_data*, %struct.sht15_data** %4, align 8
  %16 = getelementptr inbounds %struct.sht15_data, %struct.sht15_data* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @gpiod_direction_output(i32 %17, i32 1)
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %6, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %14
  %22 = load i32, i32* %6, align 4
  store i32 %22, i32* %3, align 4
  br label %39

23:                                               ; preds = %14
  %24 = load i32, i32* @SHT15_TSU, align 4
  %25 = call i32 @ndelay(i32 %24)
  %26 = load %struct.sht15_data*, %struct.sht15_data** %4, align 8
  %27 = load i32, i32* %5, align 4
  %28 = call i32 @sht15_send_byte(%struct.sht15_data* %26, i32 %27)
  %29 = load %struct.sht15_data*, %struct.sht15_data** %4, align 8
  %30 = call i32 @sht15_wait_for_response(%struct.sht15_data* %29)
  store i32 %30, i32* %6, align 4
  %31 = load i32, i32* %6, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %35

33:                                               ; preds = %23
  %34 = load i32, i32* %6, align 4
  store i32 %34, i32* %3, align 4
  br label %39

35:                                               ; preds = %23
  %36 = load i32, i32* %5, align 4
  %37 = load %struct.sht15_data*, %struct.sht15_data** %4, align 8
  %38 = getelementptr inbounds %struct.sht15_data, %struct.sht15_data* %37, i32 0, i32 0
  store i32 %36, i32* %38, align 4
  store i32 0, i32* %3, align 4
  br label %39

39:                                               ; preds = %35, %33, %21, %12
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32 @sht15_send_cmd(%struct.sht15_data*, i32) #1

declare dso_local i32 @gpiod_direction_output(i32, i32) #1

declare dso_local i32 @ndelay(i32) #1

declare dso_local i32 @sht15_send_byte(%struct.sht15_data*, i32) #1

declare dso_local i32 @sht15_wait_for_response(%struct.sht15_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
